--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,1 +1,52 @@
-/* Placeholder for styles - Ken A Collins */
+body {
+    color: whitesmoke;
+}
+
+p {
+    margin: 0;
+}
+
+h4 {
+    position: relative;
+    top: 50px;
+    margin-left: 3%;
+}
+
+.bgImage {
+    background-image: url('../images/mlb_background.jpg');
+    background-position: 0 0;
+    background-repeat: no-repeat;
+    background-size: 1920px 1080px;
+    width: 100%;
+    height: 1080px;
+}
+
+.gamesRow {
+    position: absolute;
+    top: 200px;
+    left: 0;
+    text-align: center;
+}
+
+.gameCaptions {
+    margin-right: 3%;
+    margin-bottom: 3%;
+    display: inline-block;
+}
+
+.hiddenCaption {
+    visibility: hidden;
+}
+
+.gameCell {
+    width: 200px;
+    height: 112.5px;
+    background-color: darkgray;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.gameCell img {
+    width: 100%;    /* Limit image width to that of its container. */
+    height: 100%;   /* Limit image height to that of its container. */
+}
