--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,17 +1,19 @@
 body {
-    color: whitesmoke;
+    color: white;   /* Change default font color from black to white due to dark background. */
 }
 
 p {
-    margin: 0;
+    margin: 0;      /* Remove default margin around paragraphs which are used to display metadata for focused games. */    
 }
 
+/* Headline at top of screen */
 h4 {
     position: relative;
     top: 50px;
-    margin-left: 3%;
+    left: 90px;
 }
 
+/* Background image spanning entire screen. Assigned to root element. */
 .bgImage {
     background-image: url('../images/mlb_background.jpg');
     background-position: 0 0;
@@ -21,39 +23,50 @@ h4 {
     height: 1080px;
 }
 
-.gamesRow {
+/* Root element of the display module. Spans entire screen. */
+.gamesContainer {
     position: absolute;
-    top: 200px;
     left: 0;
+    top: 0;
+}
+
+/* Represents all of the game elements spanning multiple rows based on number of games. */
+.gamesRow {
+    position: relative;
+    top: 150px;
+    left: 60px;
+}
+
+/* The metadata shown above and below the focused game image. */
+.gameCaptions {
+    margin-right: 2%;
+    margin-bottom: 2%;
+    display: inline-block;
     text-align: center;
 }
 
-.gameCaptions {
-    margin-right: 3%;
-    margin-bottom: 3%;
-    display: inline-block;
-}
-
-/* .gameCaptions p {
-    visibility: hidden;
-} */
+/* The description metadata caption requires a strict width setting or else it won't word wrap and would spill out into next sibling div. */
 p.desc {
-    width: 200px;
+    width: 209px;
 }
 
+/* Hide the captions for unfocused game cells. */
 .hiddenCaption {
     visibility: hidden;
 }
 
-.gameCell {
-    width: 200px;
-    height: 112.5px;
+/* Need a container around image so a gray rectangle placeholder can appear when there is no image available. */
+.gameImage {
+    width: 209px;
+    height: 118px;
     background-color: darkgray;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 10px;               /* Spacing between team names/scores and image. */
+    margin-bottom: 10px;            /* Spacing between image and headline. */
+    visibility: visible;            /* Ensure that image is always visible while we toggle visibility of outer gameCaptions div. */
 }
 
-.gameCell img {
-    width: 100%;    /* Limit image width to that of its container. */
-    height: 100%;   /* Limit image height to that of its container. */
+/* Don't let image be its natural size. Limit image width and height to that of its container. */
+.gameImage img {
+    width: 100%;
+    height: 100%;
 }
