--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -43,6 +43,27 @@ h5 {
     left: 60px;
 }
 
+#prevDate, #nextDate {
+    height: 54px;
+    line-height: 54px;
+    font-size: 15px;
+    padding: 0 28px;
+    text-decoration: none;
+    color: white;
+    background-color: #26a69a;
+    text-align: center;
+    letter-spacing: .5px;
+    cursor: pointer;
+    outline: 0;
+    border: none;
+    border-radius: 2px;
+    display: inline-block;
+    text-transform: uppercase;
+    vertical-align: middle;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
+    font-weight: normal;
+}
+
 #nextDate {
     margin-left: 30px;
 }
@@ -139,4 +160,24 @@ p.desc {
     width: 600px;
     font-size: 24px;
     margin-left: 50px;
+}
+
+.escapeTip {
+    position: relative;
+    bottom: -86px;
+    right: -520px;
+    font-size: 16px;
+    display: inline-block;          /* Shrinkwrap div around content. */
+    /* color: #7b1fa2; */
+    color: #26a69a;
+}
+
+.escapeKey {    /* Create what kind of resembles the Escape key. */
+    border: 2px solid black;
+    border-radius: 15%;
+    padding: 4px;
+    display: inline-block;          /* Shrinkwrap div around content. */
+    margin-left: 5px;
+    margin-right: 5px;
+    font-weight: 500;
 }
