--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -23,6 +23,8 @@ h4 {
 h5 {
     font-size: 30px;
     font-weight: 700;
+    margin-top: 0;
+    margin-bottom: 20px;
 }
 
 /* Background image spanning entire screen. Assigned to root element. */
@@ -121,17 +123,16 @@ p.desc {
 /* === MODAL DIALOG === */
 /* Modal container stretching full screen and grayed out (background). */
 .modal {
-    display: none;                  /* Hidden by default. */
-    position: fixed;                /* Stay in place. */
-    z-index: 1;                     /* Sit on top. */
-    padding-top: 190px;             /* Location of the box. */
-    left: 0;
+    display: none;                  /* Modal dialog is hidden by default. */
+    position: fixed;                /* Keep modal dialog in place. */
+    z-index: 1;                     /* Enable modal dialog to appear on top of screen when it is shown. */
+    padding-top: 190px;             /* Sets top location of the inner content box. */
+    left: 0;                        /* Modal dialog will occupy entire screen from top left corner. */
     top: 0;
     width: 100%;                    /* Full width. */
     height: 100%;                   /* Full height. */
     overflow: hidden;               /* Disable scroll if content does not fit. */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    background-color: rgba(0,0,0,0.6); /* Black w/ opacity set to darkening setting. */
 }
   
   /* Modal content for the inner dialog that is not grayed out. */
@@ -142,7 +143,7 @@ p.desc {
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
-    height: 550px;
+    height: 480px;
 }
 
 #modalSubheading {
